2010-03-25  Tony Chang  <tony@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=33697
        Have dragOpFromIEOp("move") return DragOperationGeneric | DragOperationMove
        because only returning Generic doesn't work for platforms that don't
        have a generic operation.

        Covered by existing tests (fast/events/drag-and-drop.html).

        * dom/Clipboard.cpp:
        (WebCore::dragOpFromIEOp):
        (WebCore::Clipboard::destinationOperation):
        (WebCore::Clipboard::setDestinationOperation):

2010-03-25  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Eric Seidel.

        [Qt] websocket/tests/long-invalid-header.html fails
        https://bugs.webkit.org/show_bug.cgi?id=36492

        trim message at most 128 bytes from the current position.
        I believe it's enough data to investigate the error reason and
        it makes test not depend on buffered size.

        * websockets/WebSocketHandshake.cpp:
        (WebCore::trimConsoleMessage):
        (WebCore::WebSocketHandshake::readServerHandshake):
        (WebCore::WebSocketHandshake::readHTTPHeaders):

2010-03-24  Jon Honeycutt  <jhoneycutt@apple.com>

        <rdar://problem/7780798> Missing plug-ins should be represented by text
        only, instead of lego block

        https://bugs.webkit.org/show_bug.cgi?id=36583

        Reviewed by Dan Bernstein.

        * rendering/RenderEmbeddedObject.cpp:
        (WebCore::RenderEmbeddedObject::paintReplaced):
        Set the font rendering mode and the computed size, so that the text will
        draw properly on Windows.

2010-03-24  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by Dimitri Glazkov.

        Removing unecessary redraws of LayerSkia contents:
        https://bugs.webkit.org/show_bug.cgi?id=36470

        Test: No new functionality added, no tests.

        * platform/graphics/skia/LayerRendererSkia.cpp: